fix(mixins): overflow auto

--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -1,8 +1,10 @@
-@mixin scrollable($border-margin: 1px) {
-  overflow-y: overlay;
+@mixin scrollable($padding-right: 10px) {
+  scrollbar-gutter: stable;
+  overflow-y: auto;
+  padding-right: $padding-right - 10px !important;
 
   &::-webkit-scrollbar-thumb {
-    border-top-width: $border-margin;
+    border-top-width: 1px;
   }
 
   &:hover::-webkit-scrollbar-thumb {
